kubernetes/nextcloud/09-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-buffering
  namespace: nextcloud
spec:
  buffering:
    maxRequestBodyBytes: 10737418240   # 10 GiB
    memRequestBodyBytes: 104857600     # 100 MiB
    maxResponseBodyBytes: 0
    memResponseBodyBytes: 0
    retryExpression: "IsNetworkError() && Attempts() <= 2"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-dav-redirect
  namespace: nextcloud
spec:
  redirectRegex:
    regex: "^https://nextcloud\\.khazadlab\\.es/\\.well-known/(?:carddav|caldav)$"
    replacement: "https://nextcloud.khazadlab.es/remote.php/dav/"
    permanent: true
