kubernetes/nextcloud/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: nextcloud-nextcloud-buffering@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: nextcloud.khazadlab.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
  tls:
    - hosts:
        - nextcloud.khazadlab.es
      secretName: tls-nextcloud-khazadlab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-dav-redirect
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-nextcloud-dav-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: nextcloud.khazadlab.es
      http:
        paths:
          - path: /.well-known/carddav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
          - path: /.well-known/caldav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
  tls:
    - hosts:
        - nextcloud.khazadlab.es
      secretName: tls-nextcloud-khazadlab
